rendered-nginx.yaml
---
# Source: my-nginx-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-my-nginx-chart
  labels:
    helm.sh/chart: my-nginx-chart-0.1.0
    app.kubernetes.io/name: my-nginx-chart
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: my-nginx-chart
    app.kubernetes.io/instance: nginx
---
# Source: my-nginx-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-my-nginx-chart
  labels:
    helm.sh/chart: my-nginx-chart-0.1.0
    app.kubernetes.io/name: my-nginx-chart
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-nginx-chart
      app.kubernetes.io/instance: nginx
  template:
    metadata:
      labels:
        helm.sh/chart: my-nginx-chart-0.1.0
        app.kubernetes.io/name: my-nginx-chart
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: nginx-my-nginx-chart
      securityContext:
        {}
      containers:
        - name: my-nginx-chart
          securityContext:
            {}
          image: "nginx:1.16.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: my-nginx-chart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "nginx-my-nginx-chart-test-connection"
  labels:
    helm.sh/chart: my-nginx-chart-0.1.0
    app.kubernetes.io/name: my-nginx-chart
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['nginx-my-nginx-chart:80']
  restartPolicy: Never
